<resources>
    <string name="app_name">MDM Baku</string>
    <string name="about_us">About Us</string>
    <string name="portfolio">Portfolio</string>
    <string name="team">Team</string>
    <string name="news">News</string>
    <string name="contact_us">Contact Us</string>
    <string name="mdm">MDM Baku</string>
    <string name="logo_content_description">logo</string>
    <string name="loading">Loading</string>
    <string name="title_call_permission">Call Permission</string>
    <string name="text_call_permission">MDMBaku needs you to grant Call Permission in order to make a call</string>
    <string name="ok">OK</string>
    <string name="call_permission_denied">Call Permission denied!</string>
    <string name="confirm_call_title">Making a call</string>
    <string name="confirm_call_text">Are you sure that you want to make a Call?</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="mdm_logo">MDM Logo</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="fax">Fax:</string>
    <string name="address">Address:</string>
    <string name="portfolio_image_content_description">Portfolio Image</string>
    <string name="partners_logos_content_description">Partners Logos Content Description</string>
    <string name="im_team_member">I\'m a team member</string>
    <string name="my_account">My Account</string>
    <string name="facebook_logo_cd">Facebook Logo</string>
    <string name="twitter_logo_cd">Twitter Logo</string>
    <string name="linkedin_logo_cd">Linkedin Logo</string>
    <string name="instagram_logo_cd">Instagram Logo</string>
    <string name="map_marker_title">MDM Baku Office</string>
    <string name="clients">Clients</string>
    <string-array name="tab_names">
        <item>About Us</item>
        <item>Portfolio</item>
        <item>Team</item>
        <item>News</item>
        <item>Contact Us</item>
        <item>My Account</item>
    </string-array>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyDwAuC5qCE-b34lLtyC9SHNG2FldL3hH9s"</string>
</resources>
